# embedded-tests

./: .gitignore  README.md
project001-NucleoF446RE-blinkingLed/: .project  project001-NucleoF446RE-blinkingLed.ioc
project002-f103c6-pwm-motor-control/: .cproject  .project
project003-NucleoF446RE-pwmLedControl/: .cproject  .project  pwmLedControl Debug.launch  pwmLedControl.ioc
project004-f103c6-16x2lcd/: .cproject  .project  project004-f103c6-16x2lcd.ioc
project005-NucleoF446RE-7segment-display/: .cproject  .project  info.txt  project5-NucleoF446RE-7segment-display Debug.launch
project006-NucleoF446RE-ext-trigger/: .cproject  .project  project006-NucleoF446RE-ext-trigger.ioc
project007-NucleoF446RE-int-trigger/: .cproject  .project  project007-NucleoF446RE-int-trigger.ioc  project7-NucleoF446RE-int-trigger Debug.launch
project008-NucleoF446RE-dac-example/: .cproject  .mxproject  .project  project008-NucleoF446RE-dac-example.ioc
project009-NucleoF446RE-dma-m2m/: .cproject  .project  project009-NucleoF446RE-dma-m2m.ioc  project9-NucleoF446RE-dma-m2m Debug.launch
project010-NucleoF446RE-dma-m2p/: .cproject  .project  project010-NucleoF446RE-dma-m2p.ioc  project10-NucleoF446RE-dma-m2p.launch
project011-NucleoF446RE-dma-p2p/: .cproject  .project
project012-docklight-NucleoF446RE-blinkingLed/: .cproject  .project  NucleoF446RE-project1-blinkingLed Debug.launch
project013-sw-NucleoF446RE-hcsr04-lcd16x2-led-speaker/qt_app_control/: CMakeLists.txt  Main.qml  main.cpp  serialmanager.cpp  serialmanager.h
project1-NucleoF446RE-blinkingLed/: .cproject  (+2 more)
(+248 files in other folders)
